Remove MCCC from Learn page and reorient BC3 on Desktop

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -452,8 +452,8 @@
       </section>
       <hr class="d-none d-lg-block" />
 
-      <!-------------------------------------------- MCCC -------------------------------------------->
-      <section class="d-none d-lg-flex section-margin-top">
+      <!-- ------------------------------------------ MCCC -------------------------------------------->
+      <!-- <section class="d-none d-lg-flex section-margin-top">
         <aside>
           <img
             class="border shadow-lg"
@@ -478,7 +478,7 @@
         </article>
       </section>
 
-      <!-- Mercer County Career Center MOBILE -->
+      -- Mercer County Career Center MOBILE --
       <section class="d-lg-none section-margin-top">
         <aside>
           <img
@@ -502,10 +502,17 @@
           </a>
         </article>
       </section>
-      <hr class="d-none d-lg-block" />
-
+      <hr class="d-none d-lg-block" /> -->
+      <!----------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
       <!-------------------------------- BUTLER COUNTY COMMUNITY COLLEGE -------------------------------->
       <section class="d-none d-lg-flex section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/bc3-linden-pointe.jpg"
+            alt="Butler County Community College"
+          />
+        </aside>
         <article>
           <h3 class="display-3">Butler County Community College</h3>
           <p class="lead">
@@ -522,13 +529,6 @@
             View College Site
           </a>
         </article>
-        <aside>
-          <img
-            class="border shadow-lg"
-            src="../images/schools/bc3-linden-pointe.jpg"
-            alt="Butler County Community College"
-          />
-        </aside>
       </section>
 
       <!-- WEST MINSTER UNIVERSITY MOBILE -->
