Shortened mobile nav header to fit on mobile devices

--- a/pages/work.html
+++ b/pages/work.html
@@ -89,7 +89,7 @@
             class="d-inline-block"
             height="70"
           />
-          Homegrown Mercer County</a
+          Homegrown MC</a
         >
         <button
           id="mobile-nav-button"
