--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             class="d-inline-block"
             height="70"
           />
-          Homegrown Mercer County</a
+          Homegrown MC</a
         >
         <button
           id="mobile-nav-button"
