--- a/pages/live.html
+++ b/pages/live.html
@@ -86,7 +86,7 @@
             class="d-inline-block"
             height="70"
           />
-          Homegrown Mercer County</a
+          Homegrown MC</a
         >
         <button
           id="mobile-nav-button"
