--- a/pages/play.html
+++ b/pages/play.html
@@ -85,7 +85,7 @@
             class="d-inline-block"
             height="70"
           />
-          Homegrown Mercer County</a
+          Homegrown MC</a
         >
         <button
           id="mobile-nav-button"
