Landing page mobile text reorientation (Center text, change div widths, etc)

--- a/index.html
+++ b/index.html
@@ -182,29 +182,39 @@
 
     <main>
       <!-------------------------------- SECTION 1 -------------------------------->
-      <section class="container-fluid px-0 shadow-lg" id="work-section">
+      <section class="container-fluid px-0 shadow-lg flexy" id="work-section">
         <div class="diagonal-box-1 bg-light">
           <div id="work-content-mobile" class="deskewed-box-work-section">
             <!-- Move the below div's position around to shift diagonal page content -->
             <!-- XL -->
 
             <div class="container" id="work-scrollIn-ID">
-              <h2 class="display-1 work-scrollIn-class scrollIn">Work Hard</h2>
-              <p class="lead work-scrollIn-class scrollIn">
+              <h2
+                class="display-1 work-scrollIn-class scrollIn custom-text-center"
+              >
+                Work Hard
+              </h2>
+              <p
+                class="lead work-scrollIn-class scrollIn custom-text-center ch-60"
+              >
                 With over 2,000 businesses in Mercer County, our expansive
                 economy spans over a range of industries. From manufacturing and
                 healthcare, to tourism and information technology, finding a
                 career is easier than ever. Let us help connect you today!
               </p>
-              <div class="work-scrollIn-class scrollIn">
-                <h3 class="display-4">Job Search Help</h3>
+              <div class="work-scrollIn-class scrollIn marg-up">
+                <h3 class="display-4 custom-text-center">Job Search Help</h3>
               </div>
-              <p class="lead work-scrollIn-class scrollIn">
+              <p
+                class="lead work-scrollIn-class scrollIn custom-text-center ch-60"
+              >
                 Our job search tool helps people looking for work in the Mercer
                 County Area get connected with a job that's a perfect fit. Click
                 the button below to get started!
               </p>
-              <div class="work-scrollIn-class scrollIn">
+              <div
+                class="work-scrollIn-class scrollIn custom-text-center marg-up"
+              >
                 <a
                   href="./pages/work.html"
                   id="work-button"
@@ -235,8 +245,14 @@
             <!-- XL -->
 
             <div class="container">
-              <h2 class="display-1 amenities-scrollIn scrollIn">Play Easy</h2>
-              <p class="lead amenities-scrollIn scrollIn">
+              <h2
+                class="display-1 amenities-scrollIn scrollIn custom-text-center"
+              >
+                Play Easy
+              </h2>
+              <p
+                class="lead amenities-scrollIn scrollIn custom-text-center .ch-60"
+              >
                 Whether you enjoy quiet, serene outdoor adventures or an upbeat
                 night life, Mercer County has it all. Take a stroll through Buhl
                 Park, explore nearly 20 state game lands, enjoy the eclectic
@@ -245,13 +261,19 @@
                 convenient 1-hour drive to Cleveland, Erie, and Pittsburgh.
               </p>
               <div class="amenities-scrollIn scrollIn">
-                <h3 class="display-4">Current Events</h3>
+                <h3 class="display-4 custom-text-center marg-up">
+                  Current Events
+                </h3>
               </div>
-              <p class="lead amenities-scrollIn scrollIn">
+              <p
+                class="lead amenities-scrollIn scrollIn custom-text-center .ch-60"
+              >
                 Looking for a fun event? Experience what makes Mercer County so
                 great. Check out this listing of some local community events!
               </p>
-              <div class="amenities-scrollIn scrollIn">
+              <div
+                class="amenities-scrollIn scrollIn custom-text-center marg-up"
+              >
                 <a
                   id="amenities-button"
                   class="btn btn-background-slide"
@@ -275,20 +297,24 @@
         <div class="diagonal-box-3 bg-light">
           <div id="live-content-mobile" class="deskewed-box-live-section">
             <div class="container">
-              <h2 class="display-1 live-scrollIn scrollIn">Make A Home</h2>
-              <p class="lead live-scrollIn scrollIn">
+              <h2 class="display-1 live-scrollIn scrollIn custom-text-center">
+                Make A Home
+              </h2>
+              <p class="lead live-scrollIn scrollIn custom-text-center .ch-60">
                 With a low cost of living, low traffic, and tightknit
                 communities, making Mercer County your home is a great choice.
                 Click the link below to compare the cost of living to your area!
               </p>
               <div class="live-scrollIn scrollIn">
-                <h3 class="display-4">Find Your Place</h3>
+                <h3 class="display-4 custom-text-center marg-up">
+                  Find Your Place
+                </h3>
               </div>
-              <p class="lead live-scrollIn scrollIn">
+              <p class="lead live-scrollIn scrollIn custom-text-center .ch-60">
                 Take our Neighborhood quiz and see which town is the perfect fit
                 for you!
               </p>
-              <div class="live-scrollIn scrollIn">
+              <div class="live-scrollIn scrollIn custom-text-center marg-up">
                 <a
                   id="live-button"
                   class="btn btn-background-slide"
