--- a/pages/play.html
+++ b/pages/play.html
@@ -163,9 +163,37 @@
       </div>
     </header>
     <!--------------------- END HEADER --------------------->
+
+    <!-- EVENTS -->
+    <section class="section-margin container pt-5">
+      <div class="card mb-3 border shadow-lg">
+        <img
+          id="event-img"
+          src="../images/play/events/microphone-placeholder.png"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body d-flex flex-column align-items-center">
+          <h2 class="card-title text-center display-6 font-family-1">
+            Local Events
+          </h2>
+          <p class="card-text text-center mb-4">
+            This is the place where the description of the upcoming event goes.
+            Users can then click the button below to view the event.
+          </p>
+          <a href="#" class="btn btn-primary my-3">View Event</a>
+
+          <p class="card-text text-end">
+            <small class="text-muted">Event Registration Ends 02/14/2023</small>
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- END EVENTS -->
+
     <main>
       <!-- BUHL PARK -->
-      <section class="container-fluid row mx-0 px-0">
+      <section class="container-fluid row mx-0 px-0 pt-5">
         <article
           class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center"
         >
