Event card <a> tag href location added: eventbrite.com

--- a/pages/play.html
+++ b/pages/play.html
@@ -181,7 +181,9 @@
             This is the place where the description of the upcoming event goes.
             Users can then click the button below to view the event.
           </p>
-          <a href="#" class="btn btn-primary my-3">View Event</a>
+          <a href="https://www.eventbrite.com/" class="btn btn-primary my-3"
+            >View Event</a
+          >
 
           <p class="card-text text-end">
             <small class="text-muted">Event Registration Ends 02/14/2023</small>
