Link to Events card on play.html added to nav throughout site

--- a/index.html
+++ b/index.html
@@ -143,8 +143,31 @@
             <li class="nav-item">
               <a class="nav-link" href="./pages/learn.html">Learn</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="./pages/play.html">Play</a>
+            </li> -->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Play
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="./pages/play.html"
+                    >See what's fun to do in Mercer County</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./pages/play.html#events"
+                    >Upcoming Events</a
+                  >
+                </li>
+              </ul>
             </li>
 
             <li class="nav-item">
@@ -389,6 +412,11 @@
                     >Jobs in Mercer County
                   </a>
                 </li>
+                <li class="scrollIn footer-anchor-nav-scrollIn">
+                  <a class="footer-list-item" href="./pages/play.html#events"
+                    >Local Events
+                  </a>
+                </li>
               </ul>
             </nav>
             <nav>
@@ -403,6 +431,7 @@
                 <li>
                   <a class="footer-list-item" href="./pages/play.html">Play </a>
                 </li>
+
                 <li>
                   <a class="footer-list-item" href="./pages/about.html"
                     >About Us
@@ -470,6 +499,11 @@
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="./pages/play.html">Play </a>
+                </li>
+                <li class="scrollIn footer-anchor-nav-scrollIn">
+                  <a class="footer-list-item" href="./pages/play.html#events"
+                    >Local Events
+                  </a>
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="./pages/about.html"
