--- a/pages/play.html
+++ b/pages/play.html
@@ -133,10 +133,31 @@
             <li class="nav-item">
               <a class="nav-link" href="./learn.html">Learn</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./play.html"
                 >Play</a
               >
+            </li> -->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Play
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="#"
+                    >See what's fun to do in Mercer County</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#events">Upcoming Events</a>
+                </li>
+              </ul>
             </li>
 
             <li class="nav-item">
@@ -165,7 +186,7 @@
     <!--------------------- END HEADER --------------------->
 
     <!-- EVENTS -->
-    <section class="section-margin container pt-5">
+    <section id="events" class="section-margin container pt-5">
       <div class="card mb-3 border shadow-lg">
         <img
           id="event-img"
