--- a/pages/learn.html
+++ b/pages/learn.html
@@ -136,8 +136,31 @@
                 >Learn</a
               >
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="./play.html">Play</a>
+            </li> -->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Play
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="./play.html"
+                    >See what's fun to do in Mercer County</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./play.html#events"
+                    >Upcoming Events</a
+                  >
+                </li>
+              </ul>
             </li>
 
             <li class="nav-item">
