Daycare and public transit info added to live.html. [Final First Draft of Completed Project]

--- a/pages/live.html
+++ b/pages/live.html
@@ -136,9 +136,7 @@
                 >Learn</a
               >
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="./play.html">Play</a>
-            </li> -->
+
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -881,9 +879,6 @@
             <div class="card m-2" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title">Commodore Perry School District</h5>
-                <!-- <p class="card-text">
-                  66% of patients would definitely recommend.
-                </p> -->
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">3002 Perry Highway</li>
@@ -1051,6 +1046,417 @@
                 <a href="https://wmasd.k12.pa.us/" class="card-link"
                   >View School's Website</a
                 >
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+      <!----------------------------------------------- PUBLIC TRANSIT SECTION ----------------------------------------------->
+      <section class="shadow-lg container rounded">
+        <div class="h2-header-block">
+          <h2 class="display-2 text-center pt-4">Public Transit</h2>
+          <p class="lead text-center ch-60 pb-4">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+            corrupti dolore et cum cupiditate, distinctio veniam impedit non.
+            Quam voluptatem nulla, et aliquid magni incidunt dolorem! Sit
+            molestiae perspiciatis quas?
+          </p>
+        </div>
+
+        <div class="d-flex flex-column align-items-center">
+          <img
+            src="../images/live/mcctbus.jpg"
+            alt="Public Transit Photo"
+            class="img-fluid shadow-lg mx-5 my-5 border"
+          />
+          <article class="d-flex flex-wrap justify-content-center pb-4">
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Mercer County Community Transit
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                <li class="list-group-item text-center">
+                  2495 Highland Rd Hermitage, PA 16148
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a href="http://www.mcrcog.com/mcct.php" class="card-link"
+                  >Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Shenango Valley Shuttle Service
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                <li class="list-group-item text-center">
+                  2495 Highland Rd, Hermitage, PA 16148
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a href="http://www.mcrcog.com/svss.php" class="card-link"
+                  >Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  New Castle Area Transit Authority
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                <li class="list-group-item text-center">
+                  311 Mahoning Ave, New Castle, PA 16102
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a href="https://newcastletransit.org/" class="card-link"
+                  >Website</a
+                >
+              </div>
+            </div>
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Phil's Dependable Taxi</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                <li class="list-group-item text-center">
+                  405 Walnut Ave, Sharon, PA 16146
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a
+                  href="https://www.google.com/search?q=Phil's+Dependable+Taxi"
+                  class="card-link"
+                  >Website</a
+                >
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+      <!----------------------------------------------- CHILDCARE SECTION ----------------------------------------------->
+      <section class="shadow-lg container rounded">
+        <div class="h2-header-block">
+          <h2 class="display-2 text-center pt-4">Childcare</h2>
+          <p class="lead text-center ch-60 pb-4">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+            corrupti dolore et cum cupiditate, distinctio veniam impedit non.
+            Quam voluptatem nulla, et aliquid magni incidunt dolorem! Sit
+            molestiae perspiciatis quas?
+          </p>
+        </div>
+
+        <div class="d-flex flex-column align-items-center">
+          <img
+            src="../images/live/childcare.jpg"
+            alt="childcare photo"
+            class="img-fluid shadow-lg mx-5 my-5 border"
+          />
+          <article class="d-flex flex-wrap justify-content-center pb-4">
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Children's Center of Mercer Co
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  900 N Hermitage Rd #3, Hermitage, PA 16148
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a href="https://www.ccmcpa.org/" class="card-link">Website</a>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Creative Pre School and Day Care, Inc.
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  701 Pierce Ave #4, Sharpsville, PA 16150
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a
+                  href="http://creativepreschoolanddaycare.com/"
+                  class="card-link"
+                  >Website</a
+                >
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Hopscotch Early Learning Center
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  TrailBlazer Building, 100 W Ridge Ave, Sharpsville, PA 16150
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>Phone: (724) 962-2721</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Sharpsville Nursery School
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  603 W Ridge Ave, Sharpsville, PA 16150
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>Phone: (724) 962-5802</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Tender Care Learning Centers
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  1475 N Hermitage Rd, Hermitage, PA 16148
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a href="http://www.earlyeducationpros.org/" class="card-link"
+                  >Website</a
+                >
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  St. Bartholomew Child Care Center
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  321 W Ridge Ave, Sharpsville, PA 16150
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <!-- <a href="" class="card-link">Phone: (724) 962-7554</a> -->
+                <p>Phone: (724) 962-7554</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Ms. Dianne's Daycare</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  608 Hamilton Ave, Farrell, PA 16121
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a href="#" class="card-link">N/A</a>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Son-Shine Preschool</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  250 E Butler St, Mercer, PA 16137
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>Phone: (724) 662-3320</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Wee Wisdom</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  159 Todd Ave, Hermitage, PA 16148
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <a href="https://newweewisdom.com/" class="card-link"
+                  >Website</a
+                >
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">Gibbs Family Day Care</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  2971 Crosswhite Dr, Hermitage, PA 16148
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>N/A</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Dream Builders Child Care, LLC
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  210 Snyder Rd, Hermitage, PA 16148
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>Phone: (724) 979-4420</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Creative Minds Learning Center
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  126 N Otter St Apt C, Mercer, PA 16137
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>N/A</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  John Hetra Child Dev Center
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  1901 Memorial Dr, Farrell, PA 16121
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>Phone: (724) 346-4482</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Building Blocks Child Center
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  4075 Lamor Rd, Hermitage, PA 16148
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>Phone: (724) 962-5000</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">TB Farms Family Daycare</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  203 Clark Rd, Jackson Center, PA 16133
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>Phone: (412) 287-4516</p>
+              </div>
+            </div>
+            <!------------------------------------------------->
+            <div class="card m-2" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title text-center">
+                  Sweet Child Of Mine Kidcare
+                </h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-center">
+                  3144 Main St, West Middlesex, PA 16159
+                </li>
+              </ul>
+              <div
+                class="card-body d-flex align-items-center justify-content-center"
+              >
+                <p>Phone: (724) 906-8007</p>
               </div>
             </div>
           </article>
