--- a/pages/play.html
+++ b/pages/play.html
@@ -133,11 +133,7 @@
             <li class="nav-item">
               <a class="nav-link" href="./learn.html">Learn</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./play.html"
-                >Play</a
-              >
-            </li> -->
+
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -185,7 +181,7 @@
     </header>
     <!--------------------- END HEADER --------------------->
 
-    <!-- EVENTS -->
+    <!------------------------ EVENTS ------------------------>
     <section id="events" class="section-margin container pt-5">
       <div class="card mb-3 border shadow-lg">
         <img
@@ -212,7 +208,7 @@
         </div>
       </div>
     </section>
-    <!-- END EVENTS -->
+    <!------------------------ END EVENTS ------------------------>
 
     <main>
       <!-- BUHL PARK -->
