Added footer on about page with portfolio link

--- a/pages/about.html
+++ b/pages/about.html
@@ -653,9 +653,23 @@
             />
           </svg>
         </a>
+        <!-- <p>Test</p> -->
+        <!-- <div class="container text-center"><p>Test</p></div> -->
       </div>
-      <div class="container text-center"></div>
     </footer>
+    <div id="dev-signature-div" class="shadow-lg">
+      <!-- <p class="lead d-none d-sm-block">
+        Website Design by:
+        <a class="text-light" href="https://joevilasi.com/"
+          >Joe Vilasi | Vilasi Web Consulting</a
+        >
+      </p> -->
+      <p class="">Website Design by:</p>
+      <a class="text-light lead" href="https://joevilasi.com/"
+        >Joe Vilasi | Vilasi Web Consulting</a
+      >
+      <!-- <p class="lead">Test</p> -->
+    </div>
 
     <!-- Bootstrap js Bundle -->
     <script src="../js/bootstrap.bundle.js" async defer></script>
