--- a/pages/learn.html
+++ b/pages/learn.html
@@ -475,6 +475,7 @@
       </section>
       <hr class="d-none d-lg-block" />
 
+      <!-- KEEP THE BELOW -->
       <!-- ------------------------------------------ MCCC -------------------------------------------->
       <!-- <section class="d-none d-lg-flex section-margin-top">
         <aside>
