Added mobile dropdown menu for services on 'Play' page

--- a/pages/live.html
+++ b/pages/live.html
@@ -1069,7 +1069,9 @@
             alt="Public Transit Photo"
             class="img-fluid shadow-lg mx-5 my-5 border"
           />
-          <article class="d-flex flex-wrap justify-content-center pb-4">
+          <article
+            class="flex-wrap justify-content-center pb-4 d-none d-lg-flex"
+          >
             <div class="card m-2" style="width: 18rem">
               <div class="card-body">
                 <h5 class="card-title text-center">
@@ -1151,6 +1153,102 @@
               </div>
             </div>
           </article>
+
+          <!-- MOBILE VERSION -->
+          <div class="dropdown-center d-lg-none">
+            <button
+              class="btn btn-primary dropdown-toggle mb-5"
+              type="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              View Services
+            </button>
+            <article
+              class="flex-wrap justify-content-center pb-4 dropdown-menu"
+            >
+              <div class="card m-2" style="width: 18rem">
+                <div class="card-body">
+                  <h5 class="card-title text-center">
+                    Mercer County Community Transit
+                  </h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                  <li class="list-group-item text-center">
+                    2495 Highland Rd Hermitage, PA 16148
+                  </li>
+                </ul>
+                <div
+                  class="card-body d-flex align-items-center justify-content-center"
+                >
+                  <a href="http://www.mcrcog.com/mcct.php" class="card-link"
+                    >Website</a
+                  >
+                </div>
+              </div>
+              <div class="card m-2" style="width: 18rem">
+                <div class="card-body">
+                  <h5 class="card-title text-center">
+                    Shenango Valley Shuttle Service
+                  </h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                  <li class="list-group-item text-center">
+                    2495 Highland Rd, Hermitage, PA 16148
+                  </li>
+                </ul>
+                <div
+                  class="card-body d-flex align-items-center justify-content-center"
+                >
+                  <a href="http://www.mcrcog.com/svss.php" class="card-link"
+                    >Website</a
+                  >
+                </div>
+              </div>
+              <div class="card m-2" style="width: 18rem">
+                <div class="card-body">
+                  <h5 class="card-title text-center">
+                    New Castle Area Transit Authority
+                  </h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                  <li class="list-group-item text-center">
+                    311 Mahoning Ave, New Castle, PA 16102
+                  </li>
+                </ul>
+                <div
+                  class="card-body d-flex align-items-center justify-content-center"
+                >
+                  <a href="https://newcastletransit.org/" class="card-link"
+                    >Website</a
+                  >
+                </div>
+              </div>
+              <div class="card m-2" style="width: 18rem">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Phil's Dependable Taxi</h5>
+                </div>
+                <ul class="list-group list-group-flush">
+                  <!-- <li class="list-group-item">3002 Perry Highway</li> -->
+                  <li class="list-group-item text-center">
+                    405 Walnut Ave, Sharon, PA 16146
+                  </li>
+                </ul>
+                <div
+                  class="card-body d-flex align-items-center justify-content-center"
+                >
+                  <a
+                    href="https://www.google.com/search?q=Phil's+Dependable+Taxi"
+                    class="card-link"
+                    >Website</a
+                  >
+                </div>
+              </div>
+            </article>
+          </div>
         </div>
       </section>
       <!----------------------------------------------- CHILDCARE SECTION ----------------------------------------------->
