removed .container class to mobile-pictures 1 & 2 on index.html

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           </div>
         </div>
       </section>
-      <div id="mobile-picture-1" class="container"></div>
+      <div id="mobile-picture-1"></div>
 
       <!-------------------------------- SECTION 2 -------------------------------->
       <section class="container-fluid px-0 shadow-lg" id="amenities-section">
@@ -313,7 +313,7 @@
           </div>
         </div>
       </section>
-      <div id="mobile-picture-2" class="container"></div>
+      <div id="mobile-picture-2"></div>
 
       <!-------------------------------- SECTION 3 -------------------------------->
       <section class="container-fluid px-0 shadow-lg" id="live-section">
